Update script and page to actually display something
script.coffee
* Normalize spacing in script.coffee to use 2-space indentation
* pixelData function now supports explicit unit specification
* Added trimAll function to remove repeated whitespace inside a string

index.html
* Add script and style to the document

style.css
* Created basic styles to verify output

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>.proto</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
