Testing out rough ideas for transitions.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+	<div id="logo"></div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
